# django-india

./: LICENSE  setup.cfg  setup.py
django_india/: apps.py  conf.py  data.py
django_india/management/commands/: india.py
