[metadata]
name = django-india
version = 0.0.1
description = Provides a Indian territory data as fields for Django models.
long_description = file: README.rst
author = Karthik Mullapudi
author_email = karthik.mullapudi11@gmail.com
url = https://github.com/k-mullapudi/django-india/
keywords = django, india, cities
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
